[package]
name = "example-mc"
version = "0.1.0"
edition = "2021"
authors = ["floob", "sy1ntexx", "unknowntrojan"]
description = "Example opengl dll for egui d3d11 showcase."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
egui = "0.31.1"
retour = { version = "0.3.1", features = ["static-detour"] }
jni = { version = "0.21", features = ["invocation"] }
jni-simple = "0.3.2"
once_cell = "1.19"
parking_lot = "0.12"
glam = "0.29"
egui_nerdfonts = { git = "https://github.com/JustNeoNixy/egui_nerdfonts" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.egui-opengl-internal]
path = "../egui-opengl-internal"
features = ["force-compile", "save-blob", "parking-lot"]

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
]
